-New changes added.

--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,12 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/firebase-messaging-sw.js",
+              "src/manifest.json",
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              }             
             ],
             "styles": [
               "src/styles.scss"
