--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.3",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@ionic/angular": "^8.4.1",
     "bootstrap": "^4.0.0-alpha.4",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.1",
+    "google-one-tap": "^1.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
