--- a/angular.json
+++ b/angular.json
@@ -35,13 +35,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/slick-carousel/slick/slick.css",
-              "node_modules/slick-carousel/slick/slick-theme.css"
+              "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/slick-carousel/slick/slick.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
